more work on the workout display page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorWhite">#FFF</color>
+    <color name="colorTextGrey">#9e9e9e</color>
+
 
 </resources>
